--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^5.1.3",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.13.8",
     "react-stars": "^2.2.5",
     "reactjs-popup": "^2.0.5",
     "reactstrap": "^9.0.1",
